fix(a-mavoneditor): not visible for dropdown menu of button

--- a/src/module-system/a-mavoneditor/front/src/assets/css/module.less
+++ b/src/module-system/a-mavoneditor/front/src/assets/css/module.less
@@ -25,6 +25,11 @@
       .v-left-item .op-icon,
       .v-right-item .op-icon {
         color: var(--f7-text-editor-placeholder-color);
+
+        .popup-dropdown {
+          color: var(--f7-text-editor-placeholder-color);
+          background: var(--f7-text-editor-toolbar-bg-color);
+        }
       }
 
       .v-left-item .op-icon:hover,
@@ -38,6 +43,7 @@
         color: var(--f7-text-editor-toolbar-bg-color);
         background: var(--f7-text-editor-placeholder-color);
       }
+
     }
 
     .v-note-panel {
